--- a/template/content/home/products.tmpl
+++ b/template/content/home/products.tmpl
@@ -1,5 +1,5 @@
 <div class="item-product">
-
+onboxdev
     <div class="img-product">
         <img src="/file/product/{id_brand}/{id_product}/{main_pic}" alt="{id_btand}/{id_product}">
     </div>
