Prodaction onbox.by

--- a/template/content/datm.tmpl
+++ b/template/content/datm.tmpl
@@ -1,12 +1,26 @@
-<h1>datm</h1>
+<div class="content">
 
-<ul>
-    <li><a href="http://onbox.dev/datm/">Главная</a></li>
-    <li><a href="http://onbox.dev/datm/product/">Product</a></li>
-    <li><a href="http://onbox.dev/datm/category">Категория</a></li>
-    <li><a href="http://onbox.dev/datm/brand/">Брэнд</a></li>
-    <li><a href="http://onbox.dev/datm/static/">Статистика</a></li>
-    <li><a href="http://onbox.dev/datm/content/">Контент</a></li>
-</ul>
+    <ul class="nav-user">
+        <li>
+            <a href="{url_datms}">Главная</a>
+        </li>
+        <li>
+            <a href="{url_product}">Товар</a>
+        </li>
+        <li>
+            <a href="{url_category}">Категория</a>
+        </li>
+        <li>
+            <a href="{url_brand}">Брэнды(Под категории)</a>
+        </li>
+        <!--<li>-->
+        <!--<a href="{url_static}">Статистика</a>-->
+        <!--</li>-->
+        <li>
+        <a href="{url_content}">Контент</a>
+        </li>
+    </ul>
 
-{html}
+    {html}
+
+</div>
