--- a/template/content/datm/brand.tmpl
+++ b/template/content/datm/brand.tmpl
@@ -1,5 +1,19 @@
 <div style="cursor:pointer" onclick="ajaxVS({url:'http://onbox.dev/datm/add_form_brand/', p:'proc=process&action=add_form_brand ', res:true})">plus</div>
 
-<ul>
+<table class="table table-striped">
+
+    <tr>
+        <th>ID</th>
+        <th>ID_CATEGORY</th>
+        <th>Имя</th>
+        <th>Описания</th>
+        <th>Статус</th>
+        <th>Картинка</th>
+        <th></th>
+    </tr>
+
+
     {items}
-</ul>
+
+
+</table>
