--- a/template/content/home.tmpl
+++ b/template/content/home.tmpl
@@ -1,10 +1,14 @@
 <div class="product">
 
-    <div class="items-product content-product">
+    <div id="p" class="items-product content-product">
 
 
         {products}
 
 
     </div>
+
+    <a class="btn-go" href="/showcase">Смотреть больше</a>
+
 </div>
+
