--- a/template/content/home/products.tmpl
+++ b/template/content/home/products.tmpl
@@ -1,56 +1,53 @@
 <div class="item-product">
-onboxdev
-    <div class="img-product">
-        <img src="/file/product/{id_brand}/{id_product}/{main_pic}" alt="{id_btand}/{id_product}">
-    </div>
 
-    <div class="description-product">
-        <h2>{name_product}</h2>
+    <div onclick="location.assign('/product_display/{id_product}');">
 
-        <!--<div class="price sale">-->
+        <div class="img-product">
+            <img src="/file/product/{id_brand}/{id_product}/{main_pic}" alt="{id_brand}/{id_product}">
+        </div>
+
+        <div class="description-product">
+            <h2>{name_product}</h2>
+
+            <div class="mini_desc">
+                {mini_desc}
+            </div>
+
+            <!--<div class="price sale">-->
             <!--55 <span class="currency">бел.руб.</span>-->
 
             <!--<div class="price-sale">-->
-                <!--<i></i>-->
-                <!--{price_product} <span class="currency">бел.руб.</span>-->
+            <!--<i></i>-->
+            <!--{price_product} <span class="currency">бел.руб.</span>-->
             <!--</div>-->
 
-        <!--</div>-->
+            <!--</div>-->
 
-        <div class="price">
-            55 <span class="currency">бел.руб.</span>
+            <div class="price">
+                {price} <span class="currency">бел.руб.</span>
+
+            </div>
+
+
+
+
+            <div class="article">
+                арт. N: {article}
+            </div>
 
         </div>
 
 
-        <div class="article">
-            арт. N: {article}
-        </div>
+    </div>
 
-        <div class="info-status-product">
-            <div class="shipping" title="Бесплатная доставка"></div>
-            <div class="one-product" title="Бесплатная доставка"></div>
-            <div class="new-product" title="Бесплатная доставка"></div>
-            <div class="box-product" title="Бесплатная доставка"></div>
-            <div class="gift-product" title="Бесплатная доставка"></div>
-        </div>
+
+    <div class="info-status-product">
+        <!--<div class="shipping" title="Бесплатная доставка"></div>-->
+        <!--<div class="one-product" title="Бесплатная доставка"></div>-->
+        <!--<div class="new-product" title="Бесплатная доставка"></div>-->
+        <!--<div class="box-product" title="Бесплатная доставка"></div>-->
+        <!--<div class="gift-product" title="Бесплатная доставка"></div>-->
+        <div class="basket" title="Положить в корзину" onclick="ajaxVS({url:'{patch_url}', p:'proc=process', callback:'cart'})"></div>
     </div>
 </div>
 
-
-
-
-<!--[id_product] => 13-->
-<!--[id_category] => 34-->
-<!--[id_brand] => 8-->
-<!--[name_product] => ergerg-->
-<!--[description_product] => ergerg-->
-<!--[status] => 0-->
-<!--[article] => ergre-->
-<!--[price_product] => 0-->
-<!--[sale_product] => 0-->
-<!--[main_pic] => 64fedffb.jpg-->
-<!--[min_pic_1] =>-->
-<!--[min_pic_2] =>-->
-<!--[min_pic_3] =>-->
-<!--[min_pic_4] =>-->
