--- a/template/content/datm/category.tmpl
+++ b/template/content/datm/category.tmpl
@@ -1,5 +1,17 @@
 <div style="cursor:pointer" onclick="ajaxVS({url:'http://onbox.dev/datm/add_form_category/', p:'proc=process&action=add_form_category', res:true})">plus</div>
 
-<ul>
+<table class="table table-striped">
+
+    <tr>
+        <th>ID</th>
+        <th>Имя</th>
+        <th>Описания</th>
+        <th>Статус</th>
+        <th></th>
+    </tr>
+
+
     {items}
-</ul>
+
+
+</table>
