--- a/template/content/datm/form/edit_form_brand.tmpl
+++ b/template/content/datm/form/edit_form_brand.tmpl
@@ -2,20 +2,19 @@
 <form id="form" onsubmit="ajaxVS({url:'http://onbox.dev/datm/brand', res:false, idForm:'form'});return false">
     <input type="hidden" name="proc" value="process">
     <input type="hidden" name="action" value="add_brand">
-    <input type="hidden" name="id_brand" value="{id_brand}">
-    {id_brand}
+    <input type="hidden" name="id_brand" value="{id_brand}" class="form-control">
     <label for="id_category">id_category</label>
-    <select id="id_category" name="id_category">
+    <select id="id_category" name="id_category" class="form-control">
         <option>{id_category}</option>
         {option}
     </select>
-    <input type="text" name="name_brand" value="{name_brand}">
+    <input type="text" name="name_brand" value="{name_brand}" class="form-control">
 
-    <textarea name="description_brand">{description_brand}</textarea>
-    <input type="radio" name="active" value="1" checked>
-    <input type="radio" name="active" value="0">
+    <textarea name="description_brand" class="form-control">{description_brand}</textarea>
+    <input type="radio" name="active" value="1" checked> Активный статус<br>
+    <input type="radio" name="active" value="0"> Не активный статус<br>
     <input type="file" name="file">
-    <input type="submit" value="записать">
+    <input type="submit" class="btn btn-primary" value="записать">
 </form>
 
 
