--- a/template/content/datm/form/edit_form_category.tmpl
+++ b/template/content/datm/form/edit_form_category.tmpl
@@ -2,9 +2,9 @@
     <input type="hidden" name="proc" value="process">
     <input type="hidden" name="action" value="edit_category">
     <input type="hidden" name="id_category" value="{id_category}">
-    <input type="text" name="name_category" value="{name_category}">
-    <textarea name="description_category">{description_category}</textarea>
-    <input type="radio" name="active" value="1" checked>
-    <input type="radio" name="active" value="0">
-    <input type="submit" value="записать">
+    <input type="text" name="name_category" value="{name_category}" class="form-control">
+    <textarea name="description_category" class="form-control">{description_category}</textarea>
+    <input type="radio" name="active" value="1" checked> Активный статус <br>
+    <input type="radio" name="active" value="0"> Не активный статус<br>
+    <input type="submit" class="btn btn-primary" value="Изменить">
 </form>
