--- a/template/content/datm/product.tmpl
+++ b/template/content/datm/product.tmpl
@@ -1,5 +1,23 @@
 <div style="cursor:pointer" onclick="ajaxVS({url:'http://onbox.dev/datm/add_form_product/', p:'proc=process', res:true})">plus</div>
 
-<ul>
+<table class="table table-striped">
+
+    <tr>
+        <th>ID:</th>
+        <th>Категория:</th>
+        <th>Подкатегория:</th>
+        <th>Имя:</th>
+        <th>Артикул:</th>
+        <th>Статус:</th>
+        <th>Цена:</th>
+        <th>Изоброжение:</th>
+        <th></th>
+    </tr>
+
+
     {items}
-</ul>
+
+
+</table>
+
+{num}
