--- a/template/content/reg.tmpl
+++ b/template/content/reg.tmpl
@@ -1,5 +1,25 @@
-<form action="{action}" method="post">
-    <input type="text" name="logo"><br>
-    <input type="password" name="pass"><br>
-    <input type="submit" value="ok">
-</form>
+
+<div class="registr">
+
+    <form action="{action}" method="post">
+
+        <div class="input-group span-5">
+            <span class="input-group-addon" id="sizing-addon1">@</span>
+            <input type="text" class="form-control" name="logo" placeholder="Username" aria-describedby="sizing-addon1">
+        </div>
+
+        <div class="input-group">
+            <span class="input-group-addon" id="sizing-addon2">*</span>
+            <input type="password" class="form-control" placeholder="Password" name="pass" aria-describedby="sizing-addon2">
+        </div>
+
+        <input class="btn btn-primary" type="submit" value="Войти">
+
+
+    </form>
+
+
+</div>
+
+
+
