--- a/template/footer/footer.tmpl
+++ b/template/footer/footer.tmpl
@@ -1,3 +1,16 @@
 <footer>
 
+        <div class="content info-footer">
+
+            <div>
+
+                © 2017 Интернет-магазин OnBox.by<br>
+                ИП Тихонова Лариса Леонидовна, УНП 791028671.<br>
+                Cвидетельство о регистрации №791028671 выдано Славгородским РИК 01.03.2017.<br>
+                Юридический адрес: 213245, Могилевская обл., г. Славгород, ул. Рокоссовского 29
+
+            </div>
+
+        </div>
+
 </footer>
