--- a/template/header/header_block.tmpl
+++ b/template/header/header_block.tmpl
@@ -1,76 +1,60 @@
 <header>
-    <div class="top">
-
-    </div>
+     <div class="top"></div>
 
     <div class="menu">
 
-        <div class="content menu-content">
+        <div class="content menu-content wrapper-menu-top">
 
-            <div class="logo">
-                <span class="ffa64d">n</span>Box<span class="ffa64d">.</span>by
-            </div>
+            <div class="nav nav-head">
 
+                <a href="{scr_uri}">
+                    <div class="logo">
+                        <span class="ffa64d">n</span>Box<span class="ffa64d">.</span>by
+                    </div>
+                </a>
 
+                <div class="atribut-header">
+                    <div class="search">
+                        <form action="">
+                            <input type="text">
+                            <input type="submit" value="">
+                        </form>
+                    </div>
 
-            <div class="nav">
+                    {count_cart}
 
-                <div class="search">
-                    <form action="">
-                        <input type="text">
-                        <input type="submit" value="">
-                    </form>
+                    <ul>
+                        <li class="vk"><a href="https://vk.com/toyboxby" target="_blank"></a></li>
+                        <!--<li><a href="#"></a></li>-->
+                        <!--<li><a href="#"></a></li>-->
+                    </ul>
                 </div>
 
-                <div class="cart">
-                    <a href="#"></a>
-                    <span>5</span>
-                </div>
-
-                <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                </ul>
             </div>
-
 
         </div>
 
-    </div>
+            <div class="header-block">
 
-    <div class="bottom">
+                <div class="content">
 
-        <menu class="content">
-            <li>
-                <a href="javascript:void(0)" onMouseOver="menu.showMenu('toys')" class="toys">Игрушки</a>
-                <div id="toys" class="no-block drop-down-box">
-                    <ul>
-                        <li><a href="#">Lego</a></li>
-                        <li><a href="#">Funko pop</a></li>
-                        <li><a href="#">Куклы</a></li>
-                        <li><a href="#">Машинки</a></li>
-                    </ul>
+                    <menu class="content-menu">
+                        <li>
+                            <a href="javascript:void(0)" onmousemove="toys.showBlock()" onmouseout="toys.hideBlock()" class="btn-toys">Игрушки</a><i class="arrow-menu"></i>
+                        </li>
+                        <li><a href="{scr_uri}/" class="active">Главаная</a></li>
+                        <li><a href="{scr_uri}/about">О Нас</a></li>
+                        <li><a href="{scr_uri}/contacts">Контакты</a></li>
+                        <li><a href="{scr_uri}/payment">Оплата</a></li>
+                        <li><a href="{scr_uri}/shipping">Доставка</a></li>
+                        <li><a href="{scr_uri}/guarantee">Гарантия</a></li>
+                    </menu>
+
                 </div>
-            </li>
-            <li>
-                <a href="#">Брэнды</a>
-                <div id="brand" class="no-block drop-down-box">
-                    <ul>
-                        <li><a href="#">Lego</a></li>
-                        <li><a href="#">Funko pop</a></li>
-                        <li><a href="#">Куклы</a></li>
-                        <li><a href="#">Машинки</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><a href="{scr_uri}/" class="active">Главаная</a></li>
-            <li><a href="{scr_uri}/about">О Нас</a></li>
-            <li><a href="{scr_uri}/contacts">Контакты</a></li>
-            <li><a href="{scr_uri}/payment">Оплата</a></li>
-            <li><a href="{scr_uri}/shipping">Доставка</a></li>
-            <li><a href="{scr_uri}/guarantee">Гарантия</a></li>
-        </menu>
+
+            </div>
+
+
 
     </div>
-
 </header>
