--- a/template/main/user.tmpl
+++ b/template/main/user.tmpl
@@ -13,7 +13,8 @@
 
     <link rel="stylesheet" href="src/style/normalize.css">
     <link rel="stylesheet" href="src/style/main.css">
-    <link rel="stylesheet" href="src/style/default.css">
+    <link rel="stylesheet" href="src/style/default-user.css">
+    <link rel="stylesheet" href="src/style/bootstrap.min.css">
 </head>
 <body class="body">
 
@@ -29,8 +30,9 @@
 
 <script src="src/js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="src/js/plugins.js"></script>
-<script src="src/js/vendor/jquery-3.2.1.min.js"></script>
-<script src="src/js/vendor/jquery.form.min.js"></script>
+<!--<script src="src/js/bootstrap.min.js"></script>-->
+<!--<script src="src/js/vendor/jquery-3.2.1.min.js"></script>-->
+<!--<script src="src/js/vendor/jquery.form.min.js"></script>-->
 <script src="src/js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
